Se resaltan los primeros registros

--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
         tr:hover {
             background-color: #f5f5f5;
         }
+
+        /* Estilo para aumentar el tamaño de las primeras 5 filas */
+        .larger-row {
+            font-size: 18px;
+            font-weight: bold;
+        }
     </style>
     <!-- Aquí van las etiquetas meta, title, links a CSS, etc. -->
 </head>
 
 <body>
     <div id="grid-container">
+
         <!-- Aquí irá la tabla con los datos -->
         <table>
             <thead>
