Fav icon y title

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             font-weight: bold;
         }
     </style>
+    <title>Barbieri | Fichadas Comedor</title>
+    <link rel="shortcut icon"
+        href="https://www.adbarbieri.com/hubfs/WEB2018/logos/Rebranding/Barbieri-logo-favicon-2019.png">
     <!-- Aquí van las etiquetas meta, title, links a CSS, etc. -->
 </head>
 
