--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
             font-size: 18px;
             font-weight: bold;
         }
+
+        /* Estilos para el div con el total de registros */
+        #total-records {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px;
+            background-color: #f2f2f2;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+        }
     </style>
     <title>Barbieri | Fichadas Comedor</title>
     <link rel="shortcut icon"
@@ -51,6 +62,8 @@
 </head>
 
 <body>
+    <!-- Nuevo div para mostrar el total de registros -->
+    <div id="total-records" class="larger-row">Total de registros: 0</div>
     <div id="grid-container">
 
         <!-- Aquí irá la tabla con los datos -->
